// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Block should render Default 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithClassName 1`] = `
<DocumentFragment>
  <figure
    class="extra-classname css-7tufii e1il1x350"
  >
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithEmotion 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutCaption 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
  </figure>
</DocumentFragment>
`;
